other-cel/restrict-usergroup-fsgroup-id/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-userid-groupid-fsgroup
policies:
- ../restrict-usergroup-fsgroup-id.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: validate-userid-groupid-fsgroup
  resources:
  - goodpod
  result: pass
  rule: validate-userid-groupid-fsgroup
- kind: Pod
  policy: validate-userid-groupid-fsgroup
  resources:
  - badpod01
  - badpod02
  - badpod03
  result: fail
  rule: validate-userid-groupid-fsgroup
